[package]
name = "solend-program"
version = "0.1.0"
description = "Solend Program"
authors = ["Solend Maintainers <maintainers@solend.fi>"]
repository = "https://github.com/solendprotocol/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.10.34"
spl-token = { version = "3.3.1", features=["no-entrypoint"] }
switchboard-program = "0.2.0"
switchboard-v2 = "0.1.16"
thiserror = "1.0"
uint = "0.9.1"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
# solana-program-test = "=1.10.34"
solana-sdk = "=1.10.34"
serde = "1.0"
serde_yaml = "0.9"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
